--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -6,7 +6,63 @@
     </head>
     <body>
         <script>
+            let playerScore = 0;
+            let computerScore = 0;
 
+            function computerPlay() {
+                const playOptions = ['rock', 'paper', 'scissors'];
+                const idx = Math.floor(Math.random() * playOptions.length);
+
+                return playOptions[idx];
+            }
+
+            function playRound(playerSelection, computerSelection) {
+                if (playerSelection == 'rock') {
+                    if (computerSelection == 'rock') {
+                        return 'It\'s a drawn';
+                    } else if (computerSelection == 'paper') {
+                        computerScore++;
+                        return 'You lose! Paper beats Rock';
+                    } else if (computerSelection == 'scissors') {
+                        playerScore++;
+                        return 'You win! Rock beats Scissors';
+                    }
+                } else if (playerSelection == 'paper') {
+                    if (computerSelection == 'paper') {
+                        return 'It\'s a drawn';
+                    } else if (computerSelection == 'rock') {
+                        playerScore++;
+                        return 'You Win! Paper beats Rock';
+                    } else if (computerSelection == 'scissors') {
+                        computerScore++;
+                        return 'You lose! Scissors beats Paper';
+                    }
+                } else if (playerSelection == 'scissors') {
+                    if (computerSelection == 'scissors') {
+                        return 'It\'s a drawn';
+                    } else if (computerSelection == 'paper') {
+                        playerScore++;
+                        return 'You Win! Scissors beats Paper';
+                    } else if (computerSelection == 'rock') {
+                        computerScore++;
+                        return 'You lose! Rock beats Scissors';
+                    }
+                }
+            }
+
+            function game() {
+                for (let i = 0; i < 5; i++) {
+                    playerSelection = prompt('Rock, Paper or Scissors:');
+                    playerSelection = playerSelection.toLowerCase();
+
+                    console.log(playRound(playerSelection, computerPlay()));
+                }
+
+                console.log(`Player: ${playerScore}`);
+                console.log(`Computer: ${computerScore}`);
+            }
+
+            game();
         </script>
     </body>
 </html>
